test_suite/tests/ui/borrow/duplicate_variant.stderr
error: duplicate serde attribute `borrow`
 --> tests/ui/borrow/duplicate_variant.rs:8:13
  |
8 |     #[serde(borrow)]
  |             ^^^^^^
